# c-efi

./: README  meson.build  meson_options.txt
.cherryci/: ci-test
src/: c-efi-base.h  c-efi-protocol-device-path-from-text.h  c-efi-protocol-device-path-to-text.h  c-efi-protocol-device-path-utility.h  c-efi-protocol-device-path.h  c-efi-protocol-loaded-image-device-path.h  c-efi-protocol-loaded-image.h  c-efi-protocol-simple-text-input-ex.h  c-efi-protocol-simple-text-input.h  c-efi-protocol-simple-text-output.h  c-efi-system.h  c-efi.h  meson.build  test-api.c  test-basic.c  test-hello-world.c  test-native.c  x86_64-unknown-uefi.mesoncross.ini
